<resources>
	<string name="app_name" translatable="false">AdverTop</string>
	<string name="action_settings" translatable="false">Settings</string>
	<string name="google_api_key_my"
		translatable="false">AIzaSaJ7sTw_A6D5Ns8Y3b7LBnMrM1</string>
	<string name="google_api_key_auto_generated" translatable="false">AIzaS7sTw_A36oyD5Ns8Yb7LBnMrM1</string>
	<string name="google_server_api_key" translatable="false">AIzaSaJ7sTw_A6yD5Ns38Yb7LBnMrM1</string>
	<string name="google_sender_id" translatable="false">9988933435</string>
	<string name="facebook_api_key" translatable="false">834231934159017</string>
	<string name="YANDEX_MONEY_CLIENT_ID" translatable="false">506B6B1C02522F20F1C030534702B5571A14B500B2BC2C3AF9B29D</string>
	<string name="fontBold" translatable="false">fonts/Roboto-Bold.ttf</string>
	<string name="fontRegular" translatable="false">fonts/Roboto-Regular.ttf</string>
	<string name="fontMedium" translatable="false">fonts/Roboto-Medium.ttf</string>
	<string name="permissionRequestExplanation">Дані дозволи потрібні для авторизації та роботи додатку</string>
	<string name="permissionError">Для роботи програми потрібно дати всі дозволи</string>
	<string name="rulesFrag_questionException">Введіть запитання</string>
	<string name="register_soc_login">Ввійти</string>
	<string name="register_email" translatable="false">Email</string>
	<string name="register_login">Логін</string>
	<string name="register_pass">Пароль</string>
	<string name="register_phone">Номер мобільного</string>
	<string name="register_promo">Промокод</string>
	<string name="register_but_text">Погнали</string>
	<string name="register_title">Будь-ласка заповніть поля</string>
	<string name="menu_profile">Профіль</string>
	<string name="register_number_start" translatable="false">+38</string>
	<string name="register_toolbar_title">Реєстрація</string>
	<string name="register_through_social">Або ввійдіть через вашу соц. мережу:</string>
	<string name="register_phone_help_text" translatable="false">+380*********</string>
	<string name="registerAct_policy"><![CDATA[<font color=\"#FFFFFF\"><u>Політика конфіденціальності</u></font>]]></string>
	<string name="registerAct_policyException">Прочитайте політику конфіденціальності</string>
	<string name="registerAct_promoCodeTitle">У Вас є промокод? \nУкажіть його:</string>
	<string name="registerAct_browserActNotFoundException">Не вдалося знайти додатку для перегляду</string>
	<string name="login_promo_tv_info">Якщо у Вас є промокод Ви можете його ввести перед входом в програму в поле нижче</string>
	<string name="login_toolbar_title">Вхід</string>
	<string name="loginAct_promoTite">Введіть промокод:</string>
	<string name="loginAct_enterChoiceTV">Виберіть спосіб входу:</string>
	<string name="singleAct_toolbarTitle">Завдання на %.2f</string>
	<string name="main_toolbar_title">Завдання</string>
	<string name="money_toolbar_title">Гроші</string>
	<string name="rules_toolbar_title">Інфо</string>
	<string name="task_price">%.2f</string>
	<string name="toolbarTitle_activeTasks">Активні завдання</string>
	<string name="toolbarTitle_friends">Друзі</string>
	<string name="menu_account">Профіль</string>
	<string name="nav_open" translatable="false">Open</string>
	<string name="nav_closed" translatable="false">ClosedУ</string>
	<string	name="fragment_funds_text" translatable="false">%.2f</string>
	<string name="fragmentFunds_moneyTransferred">Реферальний баланс переведено</string>
	<string name="fundsFragmentNoPaymentSystemsException">На даний момент не знайдено платіжних систем. Перевірте підключення до мережі Інтернет і спробуйте ще раз</string>
	<string name="fundsFragment_titleText">Виводь кошти куди тобі зручніше!</string>
	<string name="fundsFragment_balance">Мій баланс (заробіток):</string>
	<string name="fundsFragment_referralBalance">Реферальний баланс:</string>
	<string name="fundsFragment_getFunds">Отримати кошти</string>
	<string name="fundsFragment_tranfferButText">Перевести</string>
	<string name="fundsFragment_transferInfoText">Для того щоб вивести реферальний баланс, переведіть його на основний баланс</string>
	<string name="fundsFragment_expectedFunds">Очікуваний прибуток:</string>
	<string name="fundsFragment_transferExpectedInfoText">Гроші будуть переведені на Ваш баланс після завершення всіх активних завдань</string>
	<string name="fundsFragment_paymentSystemsMenuTitle">Обреріть систему оплати:</string>
	<string name="fundsFrag_launchLimitException">Щоб вивести кошти, Вам потрібно виконати не менше 3 завдань(10 запусків)</string>
	<string-array name="paymentSystemTitles">
		<item>Webmoney</item>
		<item>Qiwi</item>
		<item>Yandex</item>
		<item>Tele2</item>
		<item>Megafon</item>
		<item>Beeline</item>
		<item>Mts</item>
		<item>Kyivstar</item>
		<item>Lifecell</item>
		<item>Vodafone</item>
		<item>Visa</item>
		<item>Mastercard</item>
	</string-array>
	<string	name="rules_callback_text">Зворотній зв\'язок</string>
	<string name="rules_send_but_text">Надіслати</string>
	<string	name="rules_text">1. Виконуй завдання. \n2. Отримуй гроші. \n3. Виводь кошти на мобільний рахунок.</string>
	<string name="timer_update">Залишилося провести в додатку ще %02d секунд</string>
	<string name="timer_finished">Натисніть сюди, щоб отримати винагороду</string>
	<string name="timer_error">Завдання не буде виковано поки таймер не закінчиться</string>
	<string name="timer_ok_but">Продовжити</string>
	<string name="singleAct_taskTitle" formatted="false">Отримуйте по %1s на протязі %1d днів за запуск цього додатку</string>
	<string name="detailedTaskAct_taskNotReadyYetException">Завдання ще не доступне</string>
	<string name="detailedTaskAct_taskFailedException">Завдання провалено</string>
	<string name="detailedTaskAct_askingUserToOpenMarketMessage">Згорніть цей додаток, відкрийте Play Market і починайте виконувати умови</string>
	<string name="singleAct_taskDescription">(Додаток не потрібно встановлювати кожного разу)</string>
	<string name="singleAct_firstCondition">1. Знайти додаток по іконці та фразі: \"%1s\"</string>
	<string name="singleAct_secondCondition" formatted="false">%1d. Встановити і не видаляти %1d дн</string>
	<string name="singleAct_thirdCondition" formatted="false">%1d. Запускати додаток 1 раз в 24 години на протязі %1d днів</string>
	<string name="singleAct_thirdCondition_48" formatted="false">%1d. Запускати додаток 1 раз в 48 годин на протязі %1d днів</string>
	<string name="singleAct_thirdCondition_72" formatted="false">%1d. Запускати додаток 1 раз в 72 години на протязі %1d днів</string>
	<string name="singleAct_fourthCondition" formatted="false">%1d. Після запуску провести в додатку 20 секунд і натиснути на пуш-повідомлення</string>
	<string name="singleAct_fifthCondition" formatted="false">%1d. Додаткові умови:\n %1s</string>
	<string name="taskAdapter_newTaskTitle">Нове завдання</string>
	<string name="taskAdapter_activeTaskTitle">В процесі</string>
	<string	name="single_task_status">Статус:</string>
	<string	name="single_task_price">%1s</string>
	<string name="singleTask_ConditionsTitle">Умови</string>
	<string name="singleTask_statusTitle">Статус:</string>
	<string name="single_task_get_task_but_text">Виконати</string>
	<string name="single_task_status_free">Вільне</string>
	<string name="single_task_status_progress">Виконується</string>
	<string name="single_task_status_finished">Виконано</string>
	<string name="singleTask_taskEndingText"><![CDATA[Залишилося днів до закінчення: <b>%1d</b>]]></string>
	<string name="single_task_finished">Завдання виконано</string>
	<string name="singleTaskAct_referralText">Збільшити ціни\nзавдань на 30%</string>
	<string	name="single_task_rules" translatable="false">1. Install\n2. Launch</string>
	<string name="singleTask_launchAppBut">Запустити</string>
	<string name="singleTask_launchAppButDesc">і отримати +%1s</string>
	<string name="singleTask_noAppException">Спочатку встановіть додаток</string>
	<string name="singleTask_activeTaskText">Завдання виконується</string>
	<string name="singleTask_disableTaskText">Завдання ще не виконується</string>
	<string name="singleTask_toEarlyException">Ой… Запуск не зарахувався. Ще не пройшло 24 години. Спробуй пізніше</string>
	<string name="singleTask_doneText">Запустити завтра</string>
	<string name="singleTask_doneTextDesc">і отримаєте ще +%1s</string>
	<string name="singleTask_attention">Не забудьте відкрити завтра</string>
	<string name="detailedAct_appNotFoundException">Завдання не знайдено. Оновіть список завдань</string>
	<string name="empty" translatable="false"></string>
	<string name="singleTask_attentionBannerText">Увага! Після запуску здійснюйте не менше 6-ти дій в додатку. В іншому випадку ви ризикуєте потрапити в черний список виконавців і бути заблокованим! Перевірки відбуваються раз в тиждень.</string>
	<string name="singleTask_dailyTaskWithKeyWords">1. Знайти додаток за іконкою та за ключовими словами\n2. Встановити додаток\n3. Запускати днів: %1d\n4. Запускати і виконувати не менше 6-ти переходів в додатку.</string>
	<string name="singleTask_dailyTaskNoKeywords">1. Встановити додаток\n2. Запускати днів: %1d\n3. Запускати і виконувати не менше 6-ти переходів в додатку.</string>
	<string name="singleTask_singleWithKeywords">1. Знайти додаток за іконкою та за ключовими словами\n2. Встановити додаток</string>
	<string name="detailedTaskAct_additionalTaskTitle">Додаткове завдання</string>
	<string name="detailedTaskAct_additionalTaskPrice" formatted="false">Оціни додаток і отримай ще + %.2f %s</string>
	<string name="dialogStarApp_butText">Відправити скріншот на модерацію</string>
	<string name="firstReferralFrag_copyButText">Копіювати</string>
	<string name="firstReferralFrag_inviteFriendsTitle">Розповісти друзям</string>
	<string name="toolbar_balanceText">Баланс \n%.2f</string>
	<string name="infoFrag_firstRow">1. Правила</string>
	<string name="infoFrag_secondRow">2. Рефералка №1</string>
	<string name="infoFrag_thirdRow">3. Рефералка №2</string>
	<string name="infoFrag_fourthRow">4. Виведення коштів</string>
	<string name="infoFrag_fifthRow">5. Підтримка</string>
	<string name="infoFrag_policy">6. Конфіденційність</string>
	<string name="infoFrag_firstDesc" translatable="false">AdverTop – приложение для заработка денег. Мы платим за открытие приложений. Чтобы начать зарабатывать, вам нужно каждый день просто заходить в приложение AdverTop, смотреть видео, проверять наличие новых заданий от рекламодателей на главном экране и своевременно выполнять уже активные задания. Чтобы активировать задание, вам нужно установить приложение рекламодателя на свой смартфон. Далее ваша задача – открывать его определенное количество дней, и конечно, получать за это деньги. Список приложений, которые нужно открыть, вы сможете увидеть на экране «Активные задания». ВАЖНО! Чтобы получить деньги за задание, вам нужно как минимум 1 раз в 24 часа открывать рекламное приложение, используя экран «Активные задания» в AdverTop. </string>
	<string name="infoFrag_secondDesc" translatable="false">Приглашай друзей по промо-коду первой реферальной программы и существенно увеличивай свой доход. AdverTop готов платить тебе аж 30% от заработка твоих друзей. Тебе просто нужно постоянно приводить друзей и твой доход будет расти с каждым днем.</string>
	<string name="infoFrag_thirdDesc" translatable="false">Вторая реферальна программа увеличит цены заданий для тебя на 30%. Для этого тебе нужно приводить людей по промо-коду второй реферальной программы. В момент, когда один из твоих рефералов активируется (заработает 100 рублей в приложении AdverTop),  ты начинаешь получать бонусы в размере 30% от цены задания. Например, если ты выполнил задание стоимостью 15 рублей,  AdverTop выплатит тебе 19,5 рублей.</string>
	<string name="infoFrag_forthDesc" translatable="false">Выводите средства с приложения AdverTop удобным для вас способом:\n1. На мобильный счет.\n2. На банковские карты (Visa, MasterCard)\n3. Qiwi-кошелек.\n4. Яндекс Деньги.\n5. WebMoney и другие способы.</string>
</resources>